--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-apiKey: "AIzaSyD24ZaE2LkH_VnHHaLdhxS8N-u5iTGFMjk",
-  authDomain: "groove-5aef8.firebaseapp.com",
-  projectId: "groove-5aef8",
-  storageBucket: "groove-5aef8.firebasestorage.app",
-  messagingSenderId: "519778361686",
-  appId: "1:519778361686:web:b642b2c05fe3861f90b6f7",
-  measurementId: "G-MS70TGV490"
+VITE_PUBLIC_FIREBASE_API_KEY: "AIzaSyD24ZaE2LkH_VnHHaLdhxS8N-u5iTGFMjk",
+VITE_PUBLIC_FIREBASE_AUTH_DOMAIN: "groove-5aef8.firebaseapp.com",
+VITE_PUBLIC_FIREBASE_PROJECT_ID: "groove-5aef8",
+VITE_PUBLIC_FIREBASE_STORAGE_BUCKET: "groove-5aef8.firebasestorage.app",
+messagingSenderId: "519778361686",
+appId: "1:519778361686:web:b642b2c05fe3861f90b6f7",
+measurementId: "G-MS70TGV490"
