--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ VITE_PUBLIC_FIREBASE_STORAGE_BUCKET: "groove-5aef8.firebasestorage.app",
 messagingSenderId: "519778361686",
 appId: "1:519778361686:web:b642b2c05fe3861f90b6f7",
 measurementId: "G-MS70TGV490"
+
+VITE_PUBLIC_CORS_URL: "https://groove-it-app.ew.r.appspot.com",
+VITE_PUBLIC_DEEZER_API_URL:"https://api.deezer.com"
